Container/Kubernetes/k3s-soniiit/Kestra/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kestra-dashboard
  namespace: kestra
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kestra-kube.home.soniiit.net`)
      kind: Rule
      services:
        - name: kestra-service
          port: 8080
  tls:
    secretName: home-soniiit-net-selfsigned-tls
